--- a/keel-sql/src/main/resources/db/databaseChangeLog.yml
+++ b/keel-sql/src/main/resources/db/databaseChangeLog.yml
@@ -356,3 +356,6 @@ databaseChangeLog:
   - include:
       file: changelog/20210804-add-branch-to-dismissible-notifications.yml
       relativeToChangelogFile: true
+  - include:
+      file: changelog/20210809-separate-current-version-table.yml
+      relativeToChangelogFile: true
