--- a/keel-sql/src/main/resources/db/databaseChangeLog.yml
+++ b/keel-sql/src/main/resources/db/databaseChangeLog.yml
@@ -359,3 +359,6 @@ databaseChangeLog:
   - include:
       file: changelog/20210809-separate-current-version-table.yml
       relativeToChangelogFile: true
+  - include:
+      file: changelog/20210811-add-updated-at-to-delivery-config.yml
+      relativeToChangelogFile: true
