fix(preview-envs): Multiple fixes for preview environments
Squashed commit of the following:

commit 1e8c3a3e57cd9b345cd3b9c650ed3bb7e4475093
Author: Luis Pollo <lpollo@netflix.com>
Date:   Fri Aug 27 10:54:02 2021 -0700

    fix(pr): Replace usage of javaClass with ::class.java

commit 81b67fe2f0eac1c10af584206e608970d183196b
Author: Luis Pollo <lpollo@netflix.com>
Date:   Fri Aug 27 10:43:49 2021 -0700

    fix(pr): Undo changes from IntelliJ's stupid actions on save

commit 985195b17a073eb284132b15a99e197d74167c50
Author: Luis Pollo <lpollo@netflix.com>
Date:   Thu Aug 26 18:59:34 2021 -0700

    fix(preview-envs): Multiple fixes for preview environments

commit baf6c9001b28f6d74c171578e3d896ffd6629f1c
Author: Luis Pollo <lpollo@netflix.com>
Date:   Wed Aug 25 17:57:35 2021 -0700

    refactor(tests) Extract common EC2 and Titus test resources into reusable module

(cherry picked from commit 292dc8d755a8d878a44e94d4fbd650a81a875bf9)

--- a/keel-docker/keel-docker.gradle
+++ b/keel-docker/keel-docker.gradle
@@ -4,7 +4,10 @@ dependencies {
   implementation("org.springframework:spring-context")
   implementation("net.swiftzer.semver:semver:1.1.0")
 
-  implementation(project(":keel-test"))
+  testImplementation(project(":keel-test")) {
+    // avoid circular dependency which breaks Liquibase
+    exclude(module: "keel-docker")
+  }
   testImplementation("dev.minutest:minutest")
   testImplementation("io.strikt:strikt-core")
 }
