--- a/keel-test/keel-test.gradle
+++ b/keel-test/keel-test.gradle
@@ -7,6 +7,8 @@ dependencies {
   api(project(":keel-artifact"))
   api(project(":keel-igor"))
   api(project(":keel-clouddriver"))
+  implementation(project(":keel-ec2-api"))
+  implementation(project(":keel-titus-api"))
   implementation("io.mockk:mockk")
   implementation(project(":keel-spring-test-support"))
 }
