fix(constraints): test to ensure correct time zone is used when checking deploy window
(cherry picked from commit 8cc52d0652e248dea203deb7c67409222fb14437)

--- a/keel-core/keel-core.gradle
+++ b/keel-core/keel-core.gradle
@@ -31,6 +31,7 @@ dependencies {
   testImplementation(project(":keel-core-test"))
   testImplementation(project(":keel-ec2-api"))  // needed for resource dependency logic
   testImplementation("io.strikt:strikt-jackson")
+  testImplementation("io.strikt:strikt-mockk")
   testImplementation("dev.minutest:minutest")
 
   testImplementation("org.assertj:assertj-core")
