--- a/keel-web/keel-web.gradle
+++ b/keel-web/keel-web.gradle
@@ -36,6 +36,7 @@ dependencies {
 
   implementation("io.spinnaker.kork:kork-web")
   implementation("io.spinnaker.kork:kork-artifacts")
+  implementation("io.spinnaker.kork:kork-encryption")
   implementation("org.springframework.boot:spring-boot-starter-actuator")
   implementation("org.springframework.boot:spring-boot-starter-web")
   implementation("org.springframework.security:spring-security-config")
